--- a/index.html
+++ b/index.html
@@ -17,33 +17,26 @@
  </head>
 
  <body>
-
-  <header>
-
-
-  <nav class="top-menu">
-    <a href="events.html" class="menu-item">Events</a>
-    <a href="courses.html" class="menu-item">Courses</a>
-    <a href="schoolwork.html" class="menu-item">Schoolwork</a>
-    <a href="#" class="menu-item">Contact</a>
-  </nav>
-</header> 
-
-<footer> 
-  <div id="logo">
-  <h3> <span id="logo1">School of </span> <br> glimmers </h3>
-
-</div>
-
-<div class="about">
-
-</div>
-
-
-</footer>
-
+  <script src="three.r134.min.js"></script>
+  <script src="vanta.clouds.min.js"></script>
    <script src="js/jquery-3.5.1.min.js" type="text/javascript"></script>
    <script src="js/script.js" type="text/javascript"></script>
+
+   <script>
+    VANTA.CLOUDS({
+      el: "#your-element-selector",
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      skyColor: 0xc7ddf7,
+      cloudShadowColor: 0x295582
+    })
+    </script>
+    
+
  </body>
+
 
 </html>
