--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta charset="utf-8">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-   <title>SchoolofGlimmers</title>
+   <title>Softness</title>
    <meta name="description" content="">
    <link rel="canonical" href="">
    <meta property="og:url" content="">
