--- a/index.html
+++ b/index.html
@@ -1,44 +1,30 @@
 <!doctype html>
-<html lang="de">
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Clouds Animation</title>
+</head>
+<body>
 
- <head>
-   <meta charset="utf-8">
-   <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-   <title>Softness</title>
-   <meta name="description" content="">
-   <link rel="canonical" href="">
-   <meta property="og:url" content="">
-   <meta property="og:title" content="TITEL">
-   <meta property="og:image" content="">
-   <meta property="og:description" content="">
-   <link rel="icon" type="image/png" sizes="96x96" href="">
-   <link href="css/style.css" rel="stylesheet">
- </head>
+  <!-- Container for Vanta.js effect -->
+  <div id="vanta-container"></div>
 
- <body>
+  <!-- Include Three.js and Vanta.js libraries -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+  <script src="https://www.vantajs.com/dist/vanta.clouds.min.js"></script>
 
-  <h1>Softness</h1>
-  <script src="three.r134.min.js"></script>
-  <script src="vanta.clouds.min.js"></script>
-   <script src="js/jquery-3.5.1.min.js" type="text/javascript"></script>
-   <script src="js/script.js" type="text/javascript"></script>
-
-   <script>
+  <!-- Script to initialize Vanta.js Clouds effect -->
+  <script>
+    // Initialize Vanta.js Clouds effect
     VANTA.CLOUDS({
-      el: "#your-element-selector",
-      mouseControls: true,
-      touchControls: true,
-      gyroControls: false,
-      minHeight: 200.00,
-      minWidth: 200.00,
-      skyColor: 0xc7ddf7,
-      cloudShadowColor: 0x295582
-    })
-    </script>
-    
+      el: "#vanta-container",  // Specify the HTML element ID
+      skyColor: 0xe0e0e0,      // Customize sky color (optional)
+      cloudColor: 0xffffff,    // Customize cloud color (optional)
+      cloudShadowColor: 0x505050, // Customize cloud shadow color (optional)
+      speed: 0.5               // Adjust animation speed (optional)
+    });
+  </script>
 
- </body>
-
-
+</body>
 </html>
