--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ document.addEventListener('DOMContentLoaded', function() {
             minWidth: 200,
             skyColor: 0xffffff,
             cloudColor: 0xb4cbeb,
-            cloudShadowColor: 0x5863aa,
+            cloudShadowColor: 0x404c9c,
             sunColor: 0xff8e00,
             sunGlareColor: 0xffac62,
             speed: 0.70
@@ -53,7 +53,7 @@ document.addEventListener('DOMContentLoaded', function() {
                 shape.className = 'shape';
                 shape.style.left = getRandomNumber(0, window.innerWidth, margin) + 'px'; // Random left position
                 shape.style.top = getRandomNumber(0, window.innerHeight, margin) + 'px'; // Random top position
-                shape.innerText = i; // shape number
+                
 
                 shape.addEventListener('click', () => {
               
@@ -67,7 +67,7 @@ document.addEventListener('DOMContentLoaded', function() {
             }
         }
 
-        createShapes(10); 
+        createShapes(11); 
 
         function getRandomNumber(min, max, margin) {
             return Math.random() * (max - min - 2 * margin) + min + margin;
@@ -151,6 +151,15 @@ document.addEventListener('DOMContentLoaded', function() {
             title: '',
             from: 'olivia stoltzfus',
             text: 'cape cod on sunday <br>I.<br>New friends stubble<br>the sloped sand<br>dunes of Province<br>Lands, toss football<brover sand formed<br>by a grinding<br>glacier, wave arms<brover sediment from<br>an outwash plain.<br><br>II.<br><br>The American beachgrass,<br>seaside goldenrod, and<br>wormwood (especially close<br>to the sea)<br>protect themselves by<br>growing a waxy<br>cuticle to cut<br>the salt spray<br>and coastal wind.<br><br>III.<br><br>Parting is such<br>sweet sorrow.<br>My arms are<br>thick with effort<br>to keep things<br>that can’t be<br>seen or heard—<br>the things that<br>matter the most.<br>',
+            image: 'img/empty.png',
+            link: '',          
+        },
+
+
+        11: {
+            title: 'american mink',
+            from: 'olivia stoltzfus',
+            text: 'He’s nothing to be scared<br>of, beady eyes and red<br>fur untouched by water, luster<br>lost by sun. His small<br>body touches more rock than<br>my long strides. I took<br>his spot, on Tiger Rock—<br>the name I’ve given to<br>this black rock striped white.<br>Zebra Rock. Lightning Rock. American<br>Mink, although I called him<br>Sea Otter. He’s nothing to<br>be scared of, although now<br>I’m not sure how my<br>brain makes the distinction. Some<br>things taught me to not<br>be scared, like when Dad<br>brought home in his lunch<br>Tupperware a babysnapping turtle.<br>The dirt under my dad’s<br>nails— equal teachers, here. His<br>socks thick with dust, cut<br>jeans fraying over strong legs.<br>I’m only ever searching for<br>something like that—his bravery.<br>',
             image: 'img/empty.png',
             link: '',          
         },
