--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ document.addEventListener('DOMContentLoaded', function() {
             }
         }
 
-        createShapes(11); 
+        createShapes(12); 
 
         function getRandomNumber(min, max, margin) {
             return Math.random() * (max - min - 2 * margin) + min + margin;
@@ -133,9 +133,9 @@ document.addEventListener('DOMContentLoaded', function() {
 
         8: {
             title: 'lonsome cowpoke',
-            from: 'elliot romano',
+            from: 'elliott romano',
             text: 'lonesome cowpoke is a machines attempt at rendering a traditionally masculine symbol: the american cowboy. lonesome cowpoke softens the edges of this rugged male trope in substance and bitrate. you can view the project at lonsomecowpoke.online',
-            image: 'img/02_Elliott Romano.png',
+            image: 'img/02 - Elliott Romano.png',
             link: '',          
         },
        
@@ -163,6 +163,15 @@ document.addEventListener('DOMContentLoaded', function() {
             image: 'img/empty.png',
             link: '',          
         },
+
+        12: {
+            title: 'moonstone beach',
+            from: 'avery zeng',
+            text: '',
+            image: 'img/Avery Zeng.jpeg',
+            link: '',          
+        },
+        
     };
 
     const shapeContent = contentMap[shapeNumber];
