--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@ document.addEventListener('DOMContentLoaded', function() {
             title: '',
             text: 'a subject i failed to learn <br> I approach this love, like an analyst. <br> Restless, meticulous, sentimental. just to fail at understanding it. all I can do now is carry my failure with me, my rotten, growing, lace-like failure.',
             image: 'img/Amanda Li.jpeg',
-        
             from: 'amanda li'
         },
         2: {
@@ -99,8 +98,8 @@ document.addEventListener('DOMContentLoaded', function() {
         },
 
         4: {
-            title: 'lonsome cowpoke',
-            from: 'elliot romano',
+            title: 'lonesome cowpoke',
+            from: 'elliott romano',
             text: 'lonesome cowpoke is a machines attempt at rendering a traditionally masculine symbol: the american cowboy. lonesome cowpoke softens the edges of this rugged male trope in substance and bitrate. you can view the project at lonsomecowpoke.online',
             image: 'img/Elliott Romano.png',
             link: '',          
@@ -132,7 +131,7 @@ document.addEventListener('DOMContentLoaded', function() {
        
 
         8: {
-            title: 'lonsome cowpoke',
+            title: 'lonesome cowpoke',
             from: 'elliott romano',
             text: 'lonesome cowpoke is a machines attempt at rendering a traditionally masculine symbol: the american cowboy. lonesome cowpoke softens the edges of this rugged male trope in substance and bitrate. you can view the project at lonsomecowpoke.online',
             image: 'img/02 - Elliott Romano.png',
@@ -191,7 +190,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <h3>${shapeContent.from}</h3>
         <p>${shapeContent.text}</p>
         <img src="${shapeContent.image}" alt="Image ${shapeNumber}">
-        <a href="${shapeContent.link}" target="_blank">.</a>
+        <a href="${shapeContent.link}" target="_blank"></a>
     `;
 
    
