--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 <div id="vanta-container"></div>
 
 <div class="interactive-div">
-    <p>"softness" as a concept and practice has historically been marginalized in mainstream discourse as often associated with weakness or lack of resilience. This project seeks to question and explore idea(s) of softness and how the concept shapes our socio-political and cultural landscapes in subtle yet significant ways. Through the act of gathering, we aim to surface the multiple dimensions of softness and its recent surge globally in order to contribute to a more holistic understanding of the role of softness in our lives.</p>
+    <p>Softness as a concept and practice has frequently been sidelined in mainstream discourse, often perceived as synonymous with fragility or a lack of resilience. This project seeks to question that history by exploring new ideas of ‘softness’ including its contemporary relevance and function. Through the act of gathering, this ongoing collection (authored by many), puts diverse ideas of ‘softness’ in proximity to one another in order to surface the many dimensions of how ‘softness’ shapes our socio-political and cultural landscapes in subtle yet significant ways.</p>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSflIQfRcHaPY3qa1TU6pcF-pFmg3V-DqW9eyAvlj3sKh2rgxg/viewform" target="_blank">We invite you to contribute to this project through the submission form</a>
 </div>
 
 
-<a download="volume2" id="volume" href="pdf/Archiv.zip" target="_blank"> volume ii</a>
+<a download="volume2" id="volume" href="pdf/Archiv.zip" target="_blank"> get volume ii</a>
 
 <div class="index">index</div>
+
 
 <div id="shape-container"></div>
 
