--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="img/cloud.ico">
    
     <title>softness</title>
 </head>
@@ -42,7 +43,7 @@ document.addEventListener('DOMContentLoaded', function() {
             cloudShadowColor: 0x404c9c,
             sunColor: 0xff8e00,
             sunGlareColor: 0xffac62,
-            speed: 0.70
+            speed: 0.80
         });
 
         const shapeContainer = document.getElementById('shape-container');
