--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
 
 
-<a download="volume2" id="volume" href="pdf/Archiv.zip" target="_blank"> get volume ii</a>
+<a download="volume2" id="volume" href="pdf/volumeii_softness.zip" target="_blank"> get volume ii</a>
 
 <div class="index">index</div>
 
