--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/cloud.ico">
    
-    <title>softness</title>
+    <title>softness ii</title>
 </head>
 <body>
 
@@ -152,7 +152,7 @@ document.addEventListener('DOMContentLoaded', function() {
         10: {
             title: 'cape cod on sunday ',
             from: 'olivia stoltzfus',
-            text: '<br>I.<br>New friends stubble<br>the sloped sand<br>dunes of Province<br>Lands, toss football<brover sand formed<br>by a grinding<br>glacier, wave arms<brover sediment from<br>an outwash plain.<br><br>II.<br><br>The American beachgrass,<br>seaside goldenrod, and<br>wormwood (especially close<br>to the sea)<br>protect themselves by<br>growing a waxy<br>cuticle to cut<br>the salt spray<br>and coastal wind.<br><br>III.<br><br>Parting is such<br>sweet sorrow.<br>My arms are<br>thick with effort<br>to keep things<br>that can’t be<br>seen or heard—<br>the things that<br>matter the most.<br>',
+            text: '<br>I.<br> <br> New friends stubble<br>the sloped sand<br>dunes of Province<br>Lands, toss football<brover sand formed<br>by a grinding<br>glacier, wave arms<brover sediment from<br>an outwash plain.<br><br>II.<br><br>The American beachgrass,<br>seaside goldenrod, and<br>wormwood (especially close<br>to the sea)<br>protect themselves by<br>growing a waxy<br>cuticle to cut<br>the salt spray<br>and coastal wind.<br><br>III.<br><br>Parting is such<br>sweet sorrow.<br>My arms are<br>thick with effort<br>to keep things<br>that can’t be<br>seen or heard—<br>the things that<br>matter the most.<br>',
             image: 'img/empty.png',
                      
         },
